Added input fields

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,6 @@
 $color-black: #000;
 $color-white: #fff;
-$color-primary: #ff8185;
+$color-primary: #1A73ED;
 $color-secondary: #2164f3;
 $color-third: #ff5a1f;
 $color-red: #eb4962;
