--- a/src/_components/Inputs/TextInput/TextInput.module.scss
+++ b/src/_components/Inputs/TextInput/TextInput.module.scss
@@ -5,9 +5,20 @@
   margin-bottom: 5px;
 }
 .input {
-  border-radius: 0;
+  border-radius: 4px;
   height: 50px;
   border: 1px solid rgb(235, 235, 235);
   -webkit-transition: -webkit-box-shadow 0.2s ease;
   transition: box-shadow 0.2s ease;
+  outline: 0 none;
+  &:hover {
+    border: 1px solid rgb(235, 235, 235);
+  }
+  &:focus {
+    border-color: $color-primary;
+    outline: 0 none;
+    border-width: 1.5px !important;
+    box-shadow: none;
+    transition: border-color 0.4s linear;
+  }
 }
