--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,7 @@
 $color-black: #000;
 $color-white: #fff;
-$color-primary: #1A73ED;
-$color-secondary: #2164f3;
+$color-primary: #1a73ed;
+$color-secondary: #db3236;
 $color-third: #ff5a1f;
 $color-red: #eb4962;
 $color-grey: #cccccc;
