--- a/src/_components/layouts/AuthLayout/AuthLayout.module.scss
+++ b/src/_components/layouts/AuthLayout/AuthLayout.module.scss
@@ -7,8 +7,10 @@
 .contentContainer {
   float: none !important;
   margin: auto;
-  padding: 5px;
+  padding: 20px;
   @media screen and (min-width: $breakpoint-lg) {
+    border: 1px solid rgb(235, 235, 235);
+    border-radius: 4px;
     transform: translateY(100%);
   }
   @media screen and (max-width: $breakpoint-xs) {
@@ -22,4 +24,6 @@
 .title {
   text-align: center;
   font-size: 1.2em;
+  font-weight: 700;
+  color: $color-primary;
 }
