--- a/src/containers/Dashboard/Components/Header/Header.module.scss
+++ b/src/containers/Dashboard/Components/Header/Header.module.scss
@@ -3,16 +3,17 @@
   justify-content: space-between;
   align-items: center;
 
+  .title {
+    color: '#000';
+    font-weight: 900;
+    margin-right: 30;
+    font-size: 1.1em;
+  }
+
   .columnContainer {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-
-    .title {
-      color: '#000';
-      font-weight: 900;
-      margin-right: 30;
-    }
   }
   .rightColumn {
     justify-content: flex-end !important;
