--- a/src/_components/layouts/DashboardLayout/DashboardLayout.module.scss
+++ b/src/_components/layouts/DashboardLayout/DashboardLayout.module.scss
@@ -1,9 +1,20 @@
 @import '../../../sass/variables';
 
-.layout {
-  width: 100%;
+.headerContainer {
+  height: 70px;
   border: 1px solid rgb(235, 235, 235);
   box-shadow: 0 2px 8px #f0f1f2;
+  display: flex;
+  align-items: center;
+
+  .menuCol {
+    float: none !important;
+    margin: auto;
+  }
+}
+
+.contentLayout {
+  width: 100%;
 }
 
 .contentContainer {
