--- a/src/containers/Dashboard/Components/Header/Header.module.scss
+++ b/src/containers/Dashboard/Components/Header/Header.module.scss
@@ -1,21 +1,26 @@
-.headerContainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  .title {
-    color: '#000';
-    font-weight: 900;
-    margin-right: 30;
-    font-size: 1.1em;
-  }
-
-  .columnContainer {
+.headerContainerOut {
+  width: 100%;
+  height: 100%;
+  .headerContainer {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-  }
-  .rightColumn {
-    justify-content: flex-end !important;
+    height: 100%;
+
+    .title {
+      color: '#000';
+      font-weight: 900;
+      margin-right: 30;
+      font-size: 1.1em;
+    }
+
+    .columnContainer {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+    }
+    .rightColumn {
+      justify-content: flex-end !important;
+    }
   }
 }
